# openjournal

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLER_PLAN.md  LICENSE  OpenJournal_0.1.3_x64-setup.exe.sha256  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_tracker.rs  backup.rs  credential.rs  export.rs  lib.rs  main.rs  models.rs  paths.rs  provider.rs  scheduler.rs  storage.rs  summarizer.rs
