[package]
name = "openjournal"
version = "0.3.5"
description = "Privacy-first local activity journal for Windows"
authors = ["OpenJournal contributors"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "openjournal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
open = "5"
dirs = "5" 
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
winreg = "0.10"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
